--- a/02-Forecasting-Evaluation.Rmd
+++ b/02-Forecasting-Evaluation.Rmd
@@ -7,11 +7,11 @@ This chapter discusses the most common approaches, focusing on evaluating point 
 
 
 ## Measuring accuracy of point forecasts {#errorMeasures}
-We start with a setting in which we are interested in point forecasts only. In this case, we typically begin by splitting the available data into training and test sets, applying the models under consideration to the former, and producing forecasts on the latter, hiding it from the models. This is called the "fixed origin" approach: we fix the point in time from which to produce forecasts, produce them, calculate some appropriate error measure and compare the models.
+We start with a setting in which we are interested in point forecasts only. In this case, we typically begin by splitting the available data into training and test sets, applying the models under consideration to the former, and producing forecasts on the latter, hiding it from the models. This is called the "fixed origin" approach: we fix the point in time from which to produce forecasts, produce them, calculate some appropriate error measure, and compare the models.
 
-Different error measures can be used in this case. Which one to use depends on the specific need. Here we briefly discuss the most important measures and refer reader to @Davydenko2013, @SvetunkovAccuracy2019 and @SvetunkovAPEs2017 for the gory details.
+Different error measures can be used in this case. Which one to use depends on the specific need. Here I briefly discuss the most important measures and refer readers to @Davydenko2013, @SvetunkovAccuracy2019 and @SvetunkovAPEs2017 for the gory details.
 
-The majority of point forecast measures relies on the following two popular metrics:
+The majority of point forecast measures rely on the following two popular metrics:
 
 **Root Mean Squared Error** (RMSE):
 \begin{equation}
@@ -83,11 +83,11 @@ setNames(exp(sqrt(c(MSE(log(model1$holdout),
 The point forecasts produced by ETS and CES correspond to conditional means, so ideally we should focus the evaluation on RMSE-based measures.
 :::
 
-Given that the distribution of the original data is symmetric, all three error measures should generally recommend the same model. But also, given that the data we generated for the example are stationary, the two models will produce very similar forecasts. The values above demonstrate the latter point -- the accuracy between the two models is roughly the same. Note that we have evaluated the same point forecasts from the models using different error measures, which would be wrong if the distribution of the data was skewed. In our case, the model relies on Normal distribution so that the point forecast would coincide with arithmetic mean, geometric mean and median.
+Given that the distribution of the original data is symmetric, all three error measures should generally recommend the same model. But also, given that the data we generated for the example are stationary, the two models will produce very similar forecasts. The values above demonstrate the latter point -- the accuracy between the two models is roughly the same. Note that we have evaluated the same point forecasts from the models using different error measures, which would be wrong if the distribution of the data was skewed. In our case, the model relies on Normal distribution so that the point forecast would coincide with arithmetic mean, geometric mean, and median.
 
 
 ### Aggregating error measures {#errorMeasuresAggregate}
-The main advantage of the error measures discussed in the previous subsection is that they are straightforward and have a clear interpretation: they reflect the "average" distances between the point forecasts and the observed values. They are perfect for the work with only one time series. However, they are not suitable when we consider a set of time series, and a forecasting method needs to be selected across all of them. This is because they are scale-dependent and contain specific units: if you measure sales of apples in units, then MAE, RMSE and RMSLE will show the errors in units as well. And, as we know, you should not add apples to oranges -- the result might not make sense.
+The main advantage of the error measures discussed in the previous subsection is that they are straightforward and have a clear interpretation: they reflect the "average" distances between the point forecasts and the observed values. They are perfect for the work with only one time series. However, they are not suitable when we consider a set of time series, and a forecasting method needs to be selected across all of them. This is because they are scale-dependent and contain specific units: if you measure sales of apples in units, then MAE, RMSE, and RMSLE will show the errors in units as well. And, as we know, you should not add apples to oranges -- the result might not make sense.
 
 To tackle this issue, different error scaling techniques have been proposed, resulting in a zoo of error measures:
 
@@ -113,7 +113,7 @@ where $\mathrm{MAE}_a$ is the mean absolute error of the model under considerati
     \mathrm{sMAE} = \frac{\mathrm{MAE}}{\bar{y}},
     (\#eq:sMAE)
 \end{equation}
-where $\bar{y}$ is the mean of the in-sample data.
+where $\bar{y}$ is the mean of the in-sample data;
 5. and others.
 
 ::: remark
@@ -123,15 +123,15 @@ MAPE and sMAE are typically multiplied by 100% to get the percentages, which are
 There is no "best" error measure. All have advantages and disadvantages, but some are more suitable in some circumstances than others. For example:
 
 1. MAPE is scale sensitive (if the actual values are measured in thousands of units, the resulting error will be much lower than in the case of hundreds of units) and cannot be estimated on data with zeroes. Furthermore, this error measure is biased, preferring when models underforecast the data [see, for example, @Makridakis1993] and is not minimised by either mean or median, but by an unknown quantity. Accidentally, in the case of Log-Normal distribution, it is minimised by the mode [see discussion in @Kolassa2016]. Despite all the limitations, MAPE has a simple interpretation as it shows the percentage error (as the name suggests);
-2. MASE avoids the disadvantages of MAPE but does so at the cost of loosing a simple interpretation. This is because of the division by the first differences of the data (some interpret this as an in-sample one-step-ahead Naïve forecast, which does not simplify the interpretation);
+2. MASE avoids the disadvantages of MAPE but does so at the cost of losing a simple interpretation. This is because of the division by the first differences of the data (some interpret this as an in-sample one-step-ahead Naïve forecast, which does not simplify the interpretation);
 3. rMAE avoids the disadvantages of MAPE, has a simple interpretation (it shows by how much one model is better than the other), but fails, when either $\mathrm{MAE}_a$ or $\mathrm{MAE}_b$ for a specific time series is equal to zero. In practice, this happens more often than desired and can be considered a severe error measure limitation. Furthermore, the increase of rMAE (for example, with the increase of sample size) might mean that either the method A is performing better than before or that the method B is performing worse than before -- it is not possible to tell the difference unless the denominator in the formula \@ref(eq:rMAE) is fixed;
-4. sMAE avoids the disadvantages of MAPE, has an interpretation close to it but breaks down when the data is non-stationary (e.g. has a trend).
+4. sMAE avoids the disadvantages of MAPE, has an interpretation close to it but breaks down, when the data is non-stationary (e.g. has a trend).
 
 When comparing different forecasting methods, it might make sense to calculate several error measures for comparison. The choice of metric might depend on the specific needs of the forecaster. Here are a few rules of thumb:
 
-- You should typically avoid MAPE and other percentage error measures because the actual values highly influence them in the holdout.
-- If you want a robust measure that works consistently, but you do not care about the interpretation, then go with MASE.
-- If you want an interpretation, go with rMAE or sMAE. Just keep in mind that if you decide to use rMAE or any other relative measure for research purposes, you might get in an unnecessary dispute with its creator, who might blame you of stealing his creation (even if you reference his work).
+- You should typically avoid MAPE and other percentage error measures because the actual values highly influence them in the holdout;
+- If you want a robust measure that works consistently, but you do not care about the interpretation, then go with MASE;
+- If you want an interpretation, go with rMAE or sMAE. Just keep in mind that if you decide to use rMAE or any other relative measure for research purposes, you might get in an unnecessary dispute with its creator, who might blame you of stealing his creation (even if you reference his work);
 - If the data does not exhibit trends (stationary), you can use sMAE.
 
 Furthermore, similarly to the measures above, there have been proposed RMSE-based scaled and relative error metrics, which measure the performance of methods in terms of means rather than medians. Here is a brief list of some of them:
@@ -152,13 +152,13 @@ Furthermore, similarly to the measures above, there have been proposed RMSE-base
     (\#eq:sRMSE)
 \end{equation}
 
-Similarly, RMSSLE, rRMSLE and sRMSLE can be proposed, using the same principles as in \@ref(eq:RMSSE), \@ref(eq:rRMSE) and \@ref(eq:sRMSE) to assess performance of models in terms of geometric means across time series.
+Similarly, RMSSLE, rRMSLE, and sRMSLE can be proposed, using the same principles as in \@ref(eq:RMSSE), \@ref(eq:rRMSE), and \@ref(eq:sRMSE) to assess performance of models in terms of geometric means across time series.
 
-Finally, when aggregating the performance of forecasting methods across several time series, sometimes it makes sense to look at the distribution of errors -- this way, you will know which of the methods fails seriously and which does a consistently good job. If only an aggregate measure is needed then I recommend using **both mean and median of the chosen metric**. The mean might be non-finite for some error measures, especially when a method performs exceptionally poorly on a time series (an outlier). Still, it will give you information about the average performance of the method and might flag extreme cases. The median at the same time is robust to outliers and is always calculable, no matter what the distribution of the error term is. Furthermore, comparing mean and median might provide additional information about the tail of distribution without reverting to histograms or the calculation of quantiles. @Davydenko2013 argue for the use of geometric mean for relative and scaled measures. Still, as discussed earlier, it might become equal to zero or infinity if the data contains outliers (e.g. two cases, when one of the methods produced a perfect forecast, or the benchmark in rMAE produced a perfect forecast). At the same time, if the distribution of errors in logarithms is symmetric [which is the main argument of @Davydenko2013], then the geometric mean will be similar to the median, so there is no point in calculating the geometric mean at all.
+Finally, when aggregating the performance of forecasting methods across several time series, sometimes it makes sense to look at the distribution of errors -- this way, you will know which of the methods fails seriously and which does a consistently good job. If only an aggregate measure is needed then I recommend using **both the mean and median of the chosen metric**. The mean might be non-finite for some error measures, especially when a method performs exceptionally poorly on a time series (an outlier). Still, it will give you information about the average performance of the method and might flag extreme cases. The median at the same time is robust to outliers and is always calculable, no matter what the distribution of the error term is. Furthermore, comparing mean and median might provide additional information about the tail of distribution without reverting to histograms or the calculation of quantiles. @Davydenko2013 argue for the use of geometric mean for relative and scaled measures. Still, as discussed earlier, it might become equal to zero or infinity if the data contains outliers (e.g. two cases, when one of the methods produced a perfect forecast, or the benchmark in rMAE produced a perfect forecast). At the same time, if the distribution of errors in logarithms is symmetric [which is the main argument of @Davydenko2013], then the geometric mean will be similar to the median, so there is no point in calculating the geometric mean at all.
 
 
 ### Demonstration in R {#errorMeasuresExampleBig}
-In R, there is a variety of functions that calculate the error measures discussed above, including the `accuracy()` function from `forecast` package and `measures()` from `greybox`. Here is an example of how the measures can be calculated based on a couple of forecasting functions from `smooth` package for R and a set of generated time series:
+In R, there is a variety of functions that calculate the error measures discussed above, including the `accuracy()` function from the `forecast` package and `measures()` from `greybox`. Here is an example of how the measures can be calculated based on a couple of forecasting functions from the `smooth` package for R and a set of generated time series:
 
 ```{r eval=FALSE}
 # Apply a model to a test data to get names of error measures
@@ -188,7 +188,7 @@ for(i in 1:nsim){
 }
 ```
 
-The default benchmark method for the relative measures above is Naïve. To see how the distribution of error measures would look like, we can produce violinplots via the `vioplot()` function from the `vioplot` package. We will focus on rRMSE measure (see Figure \@ref(fig:errorMeasuresrRMSEDistLog)).
+The default benchmark method for the relative measures above is Naïve. To see what the distribution of error measures would look like, we can produce violinplots via the `vioplot()` function from the `vioplot` package. We will focus on the rRMSE measure (see Figure \@ref(fig:errorMeasuresrRMSEDistLog)).
 
 ```{r errorMeasuresrRMSEDist, fig.cap="Distribution of rRMSE on the original scale."}
 vioplot::vioplot(errorMeasures[,,"rRMSE"])
@@ -200,7 +200,7 @@ The distributions in Figure \@ref(fig:errorMeasuresrRMSEDistLog) look similar, a
 vioplot::vioplot(log(errorMeasures[,,"rRMSE"]))
 ```
 
-Figure \@ref(fig:errorMeasuresrRMSEDistLog) demonstrates that the distribution in logarithms is still skewed, so the geometric mean would not be suitable and might provide a misleading information (being influenced by the tail of distribution). So, we calculate mean and median rRMSE to check the overall performance of the two models:
+Figure \@ref(fig:errorMeasuresrRMSEDistLog) demonstrates that the distribution in logarithms is still skewed, so the geometric mean would not be suitable and might provide a misleading information (being influenced by the tail of distribution). So, we calculate the mean and median rRMSE to check the overall performance of the two models:
 
 ```{r}
 # Calculate mean rRMSE
@@ -209,7 +209,7 @@ apply(errorMeasures[,,"rRMSE"],2,mean)
 apply(errorMeasures[,,"rRMSE"],2,median)
 ```
 
-Based on the values above, we cannot make any solid conclusion about the performance of the two models: in terms of both mean and median rRMSE, CES is doing slightly better, but the difference between the two models is not substantial, so we can probably choose the one that is easier to work with.
+Based on the values above, we cannot make any solid conclusion about the performance of the two models; in terms of both mean and median rRMSE, CES is doing slightly better, but the difference between the two models is not substantial, so we can probably choose the one that is easier to work with.
 
 
 ## Measuring uncertainty {#uncertainty}
@@ -223,10 +223,10 @@ As discussed in Section \@ref(typesOfForecastsInterval), point forecasts are not
 where $l_{t+j}$ is the lower bound and $u_{t+j}$ is the upper bound of the interval and $\mathbbm{1}(\cdot)$ is the indicator function, returning one, when the condition is true and zero otherwise. Ideally, the coverage should be equal to the confidence level of the interval, but in reality, this can only be observed asymptotically (with the increase of the sample size) due to the inherited randomness of any sample estimates of parameters;
 2. **Range** shows the width of the prediction interval:
 \begin{equation}
-    \mathrm{Range} = \frac{1}{h} \sum_{j=1}^h (u_{t+j} -l_{t+j});
+    \mathrm{Range} = \frac{1}{h} \sum_{j=1}^h (u_{t+j} -l_{t+j}),
     (\#eq:range)
 \end{equation}
-If the range of interval from one model is lower than the range of the other one, then the uncertainty about the future values is lower for the first one. However, the narrower interval might not include as many actual values in the holdout sample, leading to lower coverage. So, there is a natural trade-off between the two measures.
+If the range of intervals from one model is lower than the range of the other one, then the uncertainty about the future values is lower for the first one. However, the narrower interval might not include as many actual values in the holdout sample, leading to lower coverage. So, there is a natural trade-off between the two measures;
 3. **Mean Interval Score** [@Gneiting2007] combines the properties of the previous two measures:
 \begin{equation}
     \begin{aligned}
@@ -235,17 +235,17 @@ If the range of interval from one model is lower than the range of the other one
     \end{aligned}
     (\#eq:MIS)
 \end{equation}
-where $\alpha$ is the significance level. If the actual values lie outside of the interval, they get penalised with a ratio of $\frac{2}{\alpha}$, proportional to the distance from the interval bound. At the same time the width of the interval positively influences the value of the measure: the wider the interval, the higher the score. The ideal model with $\mathrm{MIS}=0$ should have all the actual values in the holdout lying on the bounds of the interval and $u_{t+j}=l_{t+j}$, implying that the bounds coincide with each other and that there is no uncertainty about the future (which is not possible in real life).
+where $\alpha$ is the significance level. If the actual values lie outside of the interval, they get penalised with a ratio of $\frac{2}{\alpha}$, proportional to the distance from the interval bound. At the same time, the width of the interval positively influences the value of the measure: the wider the interval, the higher the score. The ideal model with $\mathrm{MIS}=0$ should have all the actual values in the holdout lying on the bounds of the interval and $u_{t+j}=l_{t+j}$, implying that the bounds coincide with each other and that there is no uncertainty about the future (which is not possible in real life);
 4. **Pinball Score** [@Koenker1978] measures the accuracy of models in terms of specific quantiles (this is usually applied to different quantiles produced from the model, not just to the lower and upper bounds of 95% interval):
 \begin{equation}
     \mathrm{PS} = (1 -\alpha) \sum_{y_{t+j} < q_{t+j}, j=1,\dots,h } |y_{t+j} -q_{t+j}| + \alpha \sum_{y_{t+j} \geq q_{t+j} , j=1,\dots,h } |y_{t+j} -q_{t+j}|,
     (\#eq:pinball)
 \end{equation}
-where $q_{t+j}$ is the value of the specific quantile of the distribution. PS shows how well we capture the specific quantile in the data. The lower the value of pinball is, the closer the bound is to the specific quantile of the holdout distribution. If the PS is equal to zero, then we have done the perfect job in hitting that specific quantile. The main issue with PS is that it is very difficult to assess the quantiles correctly on small samples. For example, in order to get a better idea of how the 0.975 quantile performs, we would need to have at least 40 observations, so that 39 of them would be expected to lie below this bound $\left(\frac{39}{40} = 0.975\right)$. In fact, quantiles are not always uniquely defined [see, for example, @Taylor2020], which makes the measurement challenging.
+where $q_{t+j}$ is the value of the specific quantile of the distribution. PS shows how well we capture the specific quantile in the data. The lower the value of the pinball is, the closer the bound is to the specific quantile of the holdout distribution. If the PS is equal to zero, then we have done the perfect job in hitting that specific quantile. The main issue with PS is that it is very difficult to assess the quantiles correctly on small samples. For example, in order to get a better idea of how the 0.975 quantile performs, we would need to have at least 40 observations, so that 39 of them would be expected to lie below this bound $\left(\frac{39}{40} = 0.975\right)$. In fact, quantiles are not always uniquely defined [see, for example, @Taylor2020], which makes the measurement challenging.
 
 Similar to the pinball function, it is possible to propose the expectile-based score, but while expectiles have good statistical properties [@Taylor2020], they are more difficult to interpret.
 
-Range, MIS and PS are unit-dependent. To aggregate them over several time series, they need to be scaled either via division by either the in-sample mean or in-sample mean absolute differences to obtain the scaled counterparts of the measures or via division by the values from the benchmark model to get the relative one. The idea here would be similar to what we discussed for MAE and RMSE in Section \@ref(errorMeasures).
+Range, MIS, and PS are unit-dependent. To aggregate them over several time series, they need to be scaled either via division by either the in-sample mean or in-sample mean absolute differences to obtain the scaled counterparts of the measures or via division by the values from the benchmark model to get the relative one. The idea here would be similar to what we discussed for MAE and RMSE in Section \@ref(errorMeasures).
 
 If you are interested in the model's overall performance, then MIS provides this information. However, it does not show what happens specifically (is there an issue in the distance from the bound or the width of the interval?) and it is difficult to interpret. Coverage and range are easier to interpret, but they only give information about the specific prediction interval. They typically must be traded off against each other (i.e. one can either cover more or have a narrower interval). Academics prefer pinball for uncertainty assessment, as it shows more detailed information about the predictive distribution from each model. However, while it is easier to interpret than MIS, it is still not as straightforward as coverage and range. So, the selection of the measure depends on the specific situation and the understanding of statistics by decision-makers.
 
@@ -283,7 +283,7 @@ setNames(c(mean(model1$holdout > model1Forecast$lower &
          c("Model 1", "Model 2"))
 ```
 
-The values above imply that the first model (ETS) performed better than the second one in terms of MIS and pinball loss (the interval was narrower). However, these measures do not tell much in terms of the performance of models when only applied to one time series. To see more solid results, we need to apply models to a set of time series, produce prediction intervals, calculate measures and then look at their aggregate performance, e.g. via mean / median or quantiles. The loop and the analysis would be similar to the one discussed in Section \@ref(errorMeasuresExampleBig), so we do not repeat it here.
+The values above imply that the first model (ETS) performed better than the second one in terms of MIS and pinball loss (the interval was narrower). However, these measures do not tell much in terms of the performance of models when only applied to one time series. To see more solid results, we need to apply models to a set of time series, produce prediction intervals, calculate measures, and then look at their aggregate performance, e.g. via mean/median or quantiles. The loop and the analysis would be similar to the one discussed in Section \@ref(errorMeasuresExampleBig), so we do not repeat it here.
 
 
 ## How to choose appropriate error measure {#errorMeasuresSelection}
@@ -301,11 +301,11 @@ if (knitr:::is_latex_output()) {
 The flowchart does not provide excessive options and simplifies the possible process. It does not discuss the quantile and interval measures in detail, as there are many options for them. The idea of the flowchart is to list the most important measures, and its aim is to provide a guideline for selection based on:
 
 1. Number of time series under consideration. If there are several of them and you need to aggregate the error measure, you need to use either scaled or relative ones. In the case of just one time series, you do not need to scale the error measure;
-2. What specifically you want to measure: point forecasts, quantiles, prediction interval or something else;
+2. What specifically you want to measure: point forecasts, quantiles, prediction interval, or something else;
 3. Whether the interpretability of the error measure is essential or not. If not, then scaled measures similar to @Hyndman2006 can be used. If yes, then the choice is between relative and scaled using mean measures;
-4. Whether the data is stationary or not. If it is, then it is safe to use scaled measures similar to @Petropoulos2015 because the division by in-sample mean would be meaningful. Otherwise, you should either use @Hyndman2006 scaling or relative measures;
+4. Whether the data is stationary or not. If it is, then it is safe to use scaled measures similar to @Petropoulos2015 because the division by the in-sample mean would be meaningful. Otherwise, you should either use @Hyndman2006 scaling or relative measures;
 5. Whether the data is intermittent or not. If it is and you are interested in point forecasts, then you should use RMSE based measures -- other measures might recommend zero forecast as the best one;
-6. Symmetry of distribution of demand. If it is symmetric (which does not happen very often), then the median will coincide with the mean and geometric mean, and it would not be important whether to use RMSE-, MAE- or RMSLE- based measure. In that case, just use a MAE-based one (for simplicity reasons);
+6. Symmetry of distribution of demand. If it is symmetric (which does not happen very often), then the median will coincide with the mean and geometric mean, and it would not be important whether to use RMSE-, MAE-, or RMSLE- based measure. In that case, just use an MAE-based one (for simplicity reasons);
 7. What you need (denoted as "What do you like?" in the flowchart). If you are interested in mean performance, then use RMSE based measures. The median minimises MAE, and the geometric mean minimises RMSLE. This relates to the discussion in Section \@ref(typesOfForecasts).
 
 The point forecast related error measures have been discussed in Section \@ref(errorMeasures), while the interval and quantile ones -- in Section \@ref(uncertainty).
@@ -314,7 +314,7 @@ The point forecast related error measures have been discussed in Section \@ref(e
 I personally do not recommend using MAPE and SMAPE (symmetric MAPE) for the reasons discussed by @Goodwin1999 and @Hyndman2006. In fact, any percentage-based error measure has severe limitations and should be avoided if possible.
 :::
 
-You can also download this flowchart in pdf format from the [https://www.openforecast.org/adam/](https://www.openforecast.org/adam/images/errorMeasuresFlowChart-v2.pdf) website.
+You can also download this flowchart in PDF format from the [https://www.openforecast.org/adam/](https://www.openforecast.org/adam/images/errorMeasuresFlowChart-v2.pdf) website.
 
 
 ## Rolling origin {#rollingOrigin}
@@ -337,13 +337,13 @@ if (knitr:::is_latex_output()) {
 }
 ```
 
-The plot in Figure \@ref(fig:ROProcessAnimation) shows how the origin moves forward and the point and interval forecasts of the model change. As a result, this procedure gives information about the performance of the model over a set of observations, not on a random one. There are different options of how this can be done, here we discuss the main principles behind it.
+The plot in Figure \@ref(fig:ROProcessAnimation) shows how the origin moves forward and the point and interval forecasts of the model change. As a result, this procedure gives information about the performance of the model over a set of observations, not on a random one. There are different options of how this can be done, and here we discuss the main principles behind it.
 
 ### Principles of rolling origin
 
-Figure \@ref(fig:ROProcessCO) [@Svetunkov2017] illustrates the basic idea behind rolling origin. White cells correspond to the in-sample data, while the light grey cells correspond to the three-steps-ahead forecasts. The time series in the figure has 25 observations, and forecasts are produced for eight origins starting from observation 15. In the first step, the model is estimated on the first in-sample set, and forecasts are created for the holdout. Next, another observation is added to the end of the in-sample set, the test set is advanced, and the procedure is repeated. The process stops when there is no more data left. This is a rolling origin with a **constant holdout** sample size. As a result of this procedure, eight one to three steps ahead forecasts are produced. Based on them, we can calculate the preferred error measures and choose the best performing model (see Section \@ref(errorMeasuresAggregate)).
+Figure \@ref(fig:ROProcessCO) [@Svetunkov2017] illustrates the basic idea behind rolling origin. White cells correspond to the in-sample data, while the light grey cells correspond to the three steps ahead forecasts. The time series in the figure has 25 observations, and forecasts are produced for eight origins starting from observation 15. In the first step, the model is estimated on the first in-sample set, and forecasts are created for the holdout. Next, another observation is added to the end of the in-sample set, the test set is advanced, and the procedure is repeated. The process stops when there is no more data left. This is a rolling origin with a **constant holdout** sample size. As a result of this procedure, eight one to three steps ahead forecasts are produced. Based on them, we can calculate the preferred error measures and choose the best performing model (see Section \@ref(errorMeasuresAggregate)).
 
-```{r ROProcessCO, out.width="75%", echo=FALSE, fig.cap="Rolling origin with constant holdout size from @Svetunkov2017"}
+```{r ROProcessCO, out.width="75%", echo=FALSE, fig.cap="Rolling origin with constant holdout size from \@Svetunkov2017."}
 if (knitr:::is_latex_output()) {
     # knitr::asis_output('\\includegraphics{./images/03-ROProcessCO.jpg}')
     knitr::include_graphics("./images/03-ROProcessCO.jpg")
@@ -352,9 +352,9 @@ if (knitr:::is_latex_output()) {
 }
 ```
 
-Another option for producing forecasts via rolling origin would be to continue with rolling origin even when the test sample is smaller than the forecast horizon, as shown in Figure \@ref(fig:ROProcessNoCO). In this case, the procedure continues until origin 22, when the last complete set of three-steps-ahead forecasts can be produced, and then continues with a decreasing forecasting horizon. So the two-steps-ahead forecast is produced from origin 23, and only a one-step-ahead forecast is produced from origin 24. As a result, we obtain ten one-step-ahead forecasts, nine two-steps-ahead forecasts and eight three-steps-ahead forecasts. This is a rolling origin with a **non-constant holdout** sample size, which can be helpful with small samples when not enough observations are available.
+Another option for producing forecasts via rolling origin would be to continue with rolling origin even when the test sample is smaller than the forecast horizon, as shown in Figure \@ref(fig:ROProcessNoCO). In this case, the procedure continues until origin 22, when the last complete set of three steps ahead forecasts can be produced, and then continues with a decreasing forecasting horizon. So the two steps ahead forecast is produced from origin 23, and only a one-step-ahead forecast is produced from origin 24. As a result, we obtain ten one-step-ahead forecasts, nine two steps ahead forecasts and eight three steps ahead forecasts. This is a rolling origin with a **non-constant holdout** sample size, which can be helpful with small samples when not enough observations are available.
 
-```{r ROProcessNoCO, out.width="75%", echo=FALSE, fig.cap="Rolling origin with non-constant holdout size"}
+```{r ROProcessNoCO, out.width="75%", echo=FALSE, fig.cap="Rolling origin with non-constant holdout size."}
 if (knitr:::is_latex_output()) {
     # knitr::asis_output('\\includegraphics{./images/03-ROProcessNoCO.jpg}')
     knitr::include_graphics("./images/03-ROProcessNoCO.jpg")
@@ -458,7 +458,7 @@ ourValue <- c("pred")
 If you do not specify the value to return, the function will try to return everything, but it might fail, especially if many values are returned. So, to be on the safe side, **always provide the `value` when possible**.
 :::
 
-Now that we have specified `ourCall` and `ourValue`, we can produce forecasts from the model using rolling origin. Let's say that we want three-steps-ahead forecasts and eight origins with the default values of all the other parameters:
+Now that we have specified `ourCall` and `ourValue`, we can produce forecasts from the model using rolling origin. Let's say that we want three steps ahead forecasts and eight origins with the default values of all the other parameters:
 ```{r}
 returnedValues1 <- ro(y, h=3, origins=8,
                       call=ourCall, value=ourValue)
